@@ -1,3 +1,4 @@
+	* don't filter local peers received from a non-local tracker
 	* fix python deadlock when using python extensions
 	* fixed small memory leak in DHT
 
